--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             const iframe = document.createElement('iframe');
             iframe.setAttribute('id', 'myFrame');
             iframe.setAttribute('frameborder', '0');
-            iframe.setAttribute('width', '100%');
-            iframe.setAttribute('height', '100%');
-			iframe.setAttribute('style', 'width:100%; height:900px;');
+            iframe.setAttribute('style', 'width:496px; height:900px;');
             
             // If the "key" parameter is present, update the iframe src with the key value
             if (keyParam) {
